--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,7 @@
 font_family IBM Plex Mono Medium
-font_size 18.0
+font_size 17.0
+text_gamma_adjustment 0.4
+text_contrast 10 
 
 #placement_strategy center
 #enabled_layouts Fat:bias=70
